# cookbook

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  DEPLOYMENT_MODES.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  alembic.ini  compile.py  config.yml  cookbook.sty  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  file_io.py  frontmatter.pyi  main.py  parser_config.yml  pip_outdated.txt  pyproject.toml  requirements.txt  requirements_legacy.txt  setup.cfg  setup.py  subapp.config.yml  typer.pyi  util.py
.github/workflows/: docker-publish.yml  pre-commit.yml  release-draft.yml
alembic/: env.py
alembic/versions/: .gitkeep  40300ba2fe3b_sso_auth_migration.py  b187b6d002ed_add_author_id_to_recipes_table.py  b4161f4c8a0a_initial_recipe_schema.py
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b4161f4c8a0a_initial_recipe_schema.py
backend/app/: cli.py  config.py  database.py  dependencies.py  main.py  users.py
backend/app/api/: recipes.py
backend/app/core/: markdown.py  migration.py  redis.py
backend/app/crud/: recipe.py
backend/app/models/: __init__.py  recipe.py  user.py
backend/app/schemas/: recipe.py
config/: gunicorn.sh  nginx.cookbook.conf  parser_config.yml  supervisor.cookbook.ini  texlive.profile
cookbook/: _version.py  cli.py  config.py  cookbook.sty  database.py  dependencies.py  main.py  models.py  users.py
cookbook/api/: recipes.py
cookbook/auth/: routes.py  security.py
cookbook/core/: markdown.py  migration.py  redis.py
cookbook/crud/: recipe.py
cookbook/io/: files.py  latex.py  recipefile.py
cookbook/models/: __init__.py  recipe.py  user.py
cookbook/schemas/: recipe.py  recipe_schema.py
cookbook/static/cookbook/: detail.js  detail.ts  style.css
cookbook/templates/cookbook/: base.html  detail.html  recipe_template.tex
cookbook/templates/registration/: login.html
django/: gunicorn.sh
django/cookbook/: admin.py  file_io.py  files.py  forms.py  models.py  parsers.py  urls.py  views.py
django/cookbook/io/: file_io.py  files.py  latex.py  parsers.py  recipefile.py
django/cookbook/static/cookbook/: style.css
django/cookbook/templates/cookbook/: base.html  detail.html  index.html  recipe_template.tex  results.html
django/qml/: __init__.py  dumper.py  exceptions.py  loader.py  mappings.py  parser.py  parsers.py  typeparser.py  utilities.py
django/webapps/: settings.py  urls.py
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  RecipeCard.tsx  RecipeEditor.tsx
frontend/src/hooks/: useRecipes.ts
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  NotFoundPage.tsx  RecipeDetailPage.tsx  RecipeListPage.tsx  SearchPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: editorExtensions.ts  time.ts
nginx/: nginx.conf.dev
sources/: cheesecake.yml  donuts.yml  kanelbulle.yml  lemon_meringue_pie.yml
tests/: ci.sh  compile.py  tools.sh
tests/dockerfile/: Dockerfile
tests/nginx/: cookbook.conf
