[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cookbook/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project]
name = "cookbook"
dynamic = ["version", "readme"]
license = {file = "LICENSE.md"}
description = "Modern recipe management system with FastAPI backend and React frontend"
authors = [{name = "Anton Lu", email = "anton@haochen.lu"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi~=0.135.2",
    "uvicorn[standard]~=0.42.0",
    "sqlalchemy[asyncio]~=2.0.48",
    "alembic~=1.18.4",
    "asyncpg~=0.31.0",
    "redis~=7.4.0",
    "python-multipart~=0.0.22",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "pyyaml~=6.0.3",
    "python-frontmatter~=1.1.0",
    "pyjwt~=2.12.1",
]

[project.scripts]
cookbook = "cookbook.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cookbook*"]

[project.optional-dependencies]
test = [
    "pytest~=7.4.3",
    "pytest-asyncio~=0.21.1",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "pytest-benchmark~=4.0.0",
    "pytest-xdist~=3.5.0",
    "fakeredis~=2.20.1",
    "factory-boy~=3.3.0",
    "freezegun~=1.2.2",
    "responses~=0.24.1",
    "httpx~=0.25.2",
    "aiofiles~=23.2.1",
    "aiosqlite~=0.19.0",
    "sqlalchemy-utils~=0.41.1",
    "pytest-clarity~=1.0.1",
]
security = [
    "bandit~=1.7.5",
    "safety~=2.3.5",
]
dev = [
    "black~=23.11.0",
    "ruff~=0.1.6",
    "mypy~=1.7.1",
    "pre-commit~=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=cookbook",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "auth: Authentication related tests",
    "upload: File upload related tests",
    "database: Database related tests",
    "recipe: Recipe management tests",
    "markdown: Markdown processing tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cookbook"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
  "cookbook/_version.py",
]

line-length = 88
target-version = "py314"
preview = true

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  "PERF", # perflint
  "RUF",  # ruff
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N812", "N806", "G004", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.crud.*"
warn_return_any = false

[tool.bandit]
exclude_dirs = ["tests", "migrations", "test_simple.py"]
skips = ["B101", "B601", "B105"]  # B105: hardcoded password string (common in tests)
