[metadata]
name = django-cookbook
version = 0.1
description = A Django app to show online recipes
long_description = file: README.rst
url = https://www.haochen.lu/
author = Anton Lu
author_email = anton@haochen.lu
license = None
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.5
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: